[package]
name = "video-scheduler-gstreamer"
version = "0.1.0"
edition = "2021"
authors = ["dmitryshylgenkodv@gmail.com"]
description = "A Rust-based video streaming application with GStreamer for HLS/RTP processing, SCTE-35 ad insertion, and video compositing"
license = "MIT"
repository = "https://github.com/fstar-dev92/video-scheduler-rust.git"

[dependencies]
# GStreamer bindings
gstreamer = "0.21"
gstreamer-app = "0.21"
gstreamer-base = "0.21"
gstreamer-video = "0.21"
gstreamer-audio = "0.21"
gstreamer-rtp = "0.21"
gstreamer-rtsp = "0.21"
gstreamer-net = "0.21"

# Async runtime
tokio = { version = "1.0", features = ["full"] }

# Command line argument parsing
clap = { version = "4.0", features = ["derive"] }

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Logging
tracing = "0.1"
tracing-subscriber = "0.3"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# UUID generation
uuid = { version = "1.0", features = ["v4"] }

# Time handling
chrono = { version = "0.4", features = ["serde"] }

# Network utilities
url = "2.0"

# File system utilities
walkdir = "2.0"

# System signal handling
tokio-util = { version = "0.7", features = ["signal"] }

[dev-dependencies]
tempfile = "3.0"

[[bin]]
name = "video-scheduler"
path = "src/main.rs"

[[bin]]
name = "hls-pipeline"
path = "src/pipeline/hls_pipeline.rs"

[[bin]]
name = "rtp-pipeline"
path = "src/pipeline/rtp_pipeline.rs"

[[bin]]
name = "scte35-handler"
path = "src/pipeline/scte35_handler.rs"

[[bin]]
name = "stream-recorder"
path = "src/pipeline/stream_recorder.rs"

[[bin]]
name = "stream-scheduler"
path = "src/pipeline/stream_scheduler.rs"
